app/assets/stylesheets/place.css
.place {
  width: 100%;
  height: auto;
  margin-bottom: 50px;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.place-heading-container {
  padding: 16px 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
}

.place-heading-left {
  display: flex;
  gap: 2px;
  flex-direction: column;
}

.place-heading-title {
  display: flex;
  align-items: center;
  font-size: 1.25rem;
  font-weight: 500;
  min-height: 42px;
}

.place-review-score-container {
  display: flex;
  align-items: center;
}

.review-score {
  background-color: var(--black);
  color: var(--white);
  padding: 2px 4px;
  border-radius: 5px;
  display: inline-flex;
  align-items: center;
  gap: 2px;
}

.review-size {
  text-decoration: underline;
  margin-left: 8px;
}

#place-edit-toggle-button {
  border: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: transparent;
}

.place-toggle-text {
  color: var(--gray);
  font-size: 0.875rem;
}

.separator {
  margin: 24px 20px;
  border: 0.5px solid rgba(227, 230, 232);
}

.place-features-container {
  display: flex;
  flex-direction: column;
}

/* Slider images modal form starts */
.slider {
  .edit-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

  .edit-button {
    position: absolute;
    z-index: 1;
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.5);
  }

  .edit-icon-container {
    left: calc(50% - 21px);
    top: calc(50% - 21px);
  }
}

.photo-select-form-container {
  margin: 16px 20px;

  & p {
    margin: 16px 0;
    text-align: center;
  }
}

.select-images-container {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.image-checkbox {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  & input[type="checkbox"] {
    position: absolute;
    width: 20px;
    height: 20px;
  }
}

.add-new-photos {
  margin: 40px 20px 40px 20px;
  display: flex;
  flex-direction: column;
  max-width: 360px;

  & label {
    font-size: 1rem;
  }
}

/* Slider images modal form end */

.place-details {
  display: flex;
  flex-direction: column;
  padding: 0 20px;
}

.place-details-primary-wrapper {
  margin-top: 1rem;
  display: flex;
  justify-content: space-between;
}

.place-detail {
  flex: 1;
  display: flex;
  align-items: flex-start;
  justify-content: center;
}

.detail-group {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 42px;

  .detail {
    font-size: 0.75rem;
    text-align: center;
  }
}

.detail-icon {
  height: 26px;
  width: auto;
}

.place-closed {
  filter: grayscale(1);
}

.dynamic-icon-wrapper {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

.dynamic-status {
  position: absolute;
  bottom: 0;
  font-size: 0.75rem;
}

.opening-hours-table {
  visibility: hidden;
  opacity: 0;
  transform: translateY(-10px);
  transition: visibility 0s 0.3s, opacity 0.3s, transform 0.3s;
  position: absolute;
  top: calc(100% + 5px);
  left: 0;
  width: 190px;
  background-color: var(--white);
  color: var(--black);
  border-radius: 10px;
  z-index: 2;
  padding: 10px;
  box-shadow: 0 0.25rem 1.25rem 0 rgba(0, 0, 0, 0.25);
}

.place-status-wrapper:hover .opening-hours-table {
  visibility: visible;
  opacity: 1;
  transform: translateY(0);
  transition: visibility 0s, opacity 0.3s, transform 0.3s;
}

.opening-hours-table-heading {
  font-weight: 500;
}

/* Modal forms start */
.select-type {
  width: 100%;
}

#place-location {
  #location-input {
    border-radius: 5px 5px 0 0;
    margin-bottom: -1px;
  }

  #modal-location-wrapper {
    max-width: 500px;
    min-width: 280px;
    width: 100%;
  }

  #modal-map {
    width: 100%;
    height: 200px;
    border: 1px solid var(--gray);
    border-radius: 0 0 5px 5px;
  }

  #location-input:focus ~ #modal-map {
    border: 1px solid var(--green);
  }
}

/* Modal forms end */

.place-tags {
  margin-top: 16px;
  height: 42px;
  display: flex;
  align-items: center;
  flex-direction: row;
  overflow-x: scroll;
  scrollbar-width: none;
  -ms-overflow-style: none;
  gap: 8px;

  &::-webkit-scrollbar {
    display: none;
  }
}

.place-tag {
  font-size: 0.875rem;
  border: 1px solid var(--gray);
  border-radius: 5px;
  padding: 3px 7px;
  white-space: nowrap;
}

/* Place tags modal form starts */
#place-tags-modal {
  padding: 20px;
  overflow: scroll;

  .tags-form {
    height: 100%;
    max-height: 100%;
    overflow: scroll;
  }
}

/* Place tags modal form ends */

.social-links {
  margin-top: 16px;
  display: flex;
  justify-content: space-between;
  max-width: 280px;

  .edit-button {
    position: absolute;
    top: 0;
    left: 0;
    background-color: rgba(255, 255, 255, 0.8);
  }
}

.social {
  width: 42px;
  height: 42px;
}

/* Place social links modal form starts */
.modal-social-group {
  display: flex;
  flex-direction: column;
  position: relative;
}

.social-platform {
  position: absolute;
  top: 22px;
  padding: 10px 8px;
  border-right: 1px solid var(--gray);
}

.social-input {
  padding-left: 138px;
}

.social-input-x {
  padding-left: 75px;
}

/* Place social links modal form end */

#reviews {
  padding: 0 20px;
  display: flex;
  flex-direction: column;
  align-self: center;
}

#reviews-header {
  & h2 {
    font-size: 1.25rem;
    font-weight: 500;
    margin-bottom: 16px;
    max-width: 280px;
  }
}

.review {
  margin-bottom: 20px;
}

.review-wrapper {
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.review-content {
  .show-rating {
    display: flex;
    align-items: center;
    margin-bottom: 8px;

    .star {
      margin: 0;
      width: 14px;
      height: 14px;
    }
  }
}

.review-time {
  margin-left: 14px;
  font-size: 0.875rem;
  color: var(--gray);
}

.review-images-container {
  margin-top: 8px;
  display: flex;
  gap: 12px;
  flex-wrap: wrap;
}

.review-image {
  width: 81px;
  height: 81px;
  object-fit: cover;
  border-radius: 5px;
}

.reviewer-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 0.875rem;
  word-break: break-word;
  min-width: 90px;
  max-width: 90px;
  color: var(--gray);

  & a {
    color: var(--gray);
    text-decoration: underline;
  }
}

.review-avatar {
  width: 50px;
  height: 50px;
  border-radius: 50%;
}

.review:last-of-type {
  margin-bottom: 30px;
}

.add-review-btn {
  max-width: 280px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: 500;
  gap: 8px;
  height: 42px;
  border: 1px solid var(--gray);
  padding: 11px 35px;
  width: 100%;
  border-radius: 20px;
  margin: 0 auto;
}

/* Turbo modal forms  */
.modalize {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  position: fixed;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 3;
  background: rgba(255, 255, 255, 0.9);
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  overflow: scroll;

  & label {
    font-size: 1rem;
  }
}

.inputs-wrapper {
  width: 280px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.form-group {
  width: 100%;
  font-weight: 400;
  display: flex;
  flex-direction: column;
}

.modal-input {
  width: 100%;
}

.form-buttons {
  display: flex;
  justify-content: space-between;
  width: 280px;
  margin: 16px auto;
  z-index: 3;

  .primary-green-btn {
    font-size: 1rem;
    font-weight: 500;
    height: 42px;
    border-radius: 20px;
    width: 118px;
    background-color: var(--green);
    color: var(--white);
    border: none;
  }

  .turbo-cancel-btn {
    font-size: 1rem;
    font-weight: 500;
    border-radius: 20px;
    color: var(--gray);
    border: 1px solid var(--gray);
    width: 118px;
    height: 42px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

/* Inline forms end  */

#contributors {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 16px;

  & h2 {
    font-size: 1.75rem;
    font-weight: 500;
    margin-bottom: 16px;
  }
}

.contributors-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-top: 16px;
  max-width: 280px;
  gap: 16px;
  flex-wrap: wrap;

  & img {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    object-fit: cover;
  }
}

@media (min-width: 1024px) {
  .separator {
    margin: 48px 0;
  }

  .place-heading-container {
    padding: 0;
    margin-top: 24px;
  }

  .place-heading-title {
    font-size: 2rem;
  }

  .place-features-container {
    flex-direction: row;
    margin-top: 24px;
    gap: 60px;
  }

  .place-details {
    width: 50%;
    padding: 0;
  }

  .place-details-primary-wrapper {
    margin-top: 0;
  }

  .place-detail {
    flex: 0;
  }

  .social-links {
    flex-direction: column;
    gap: 16px;
  }

  .social-link {
    display: flex;
    align-items: center;
    column-gap: 6px;
    text-decoration: underline;
  }

  .detail-group {
    flex-direction: row;
    gap: 4px;

    .detail-icon {
      height: 36px;
    }

    .detail {
      white-space: nowrap;
      font-size: 1.125rem;
    }

    .dynamic-status {
      font-size: 0.8rem;
    }
  }

  .place {
    padding: 0 48px;
  }

  #reviews {
    flex-direction: row;
    gap: 27px;

    #reviews-header {
      & h2 {
        font-size: 1.75rem;
      }
    }
  }

  .review {
    margin-bottom: 40px;
  }

  .review-content {
    .show-rating {
      .star {
        width: 20px;
        height: 20px;
      }
    }
  }

  .review-time {
    font-size: 1rem;
  }

  .review-image {
    width: 120px;
    height: 120px;
  }

  .reviewer-info {
    width: 140px;
  }

  .review-avatar {
    width: 70px;
    height: 70px;
  }
}

